Add /analyzeText endpoint
